--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 /* Space background with panning animation */
-div {
+.test {
     position: relative;
     height: 100%;
     width: 100%;
@@ -57,6 +57,7 @@ div {
     color: white;
     text-align: center;
     background: none;
+    opacity: 0;
 }
 
 .visible {
