--- a/style.css
+++ b/style.css
@@ -63,3 +63,25 @@ body {
 .visible {
     opacity: 1;
 }
+
+.menu {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+    z-index: 100;
+    opacity: 0;
+}
+
+.start {
+    position: relative;
+    display: block;
+    width: 200px;
+    height: 60px;
+    background-color: white;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2em;
+    top: 35%;
+    left: 45%;
+}
