--- a/style.css
+++ b/style.css
@@ -8,10 +8,10 @@ body {
 /* Space background with panning animation */
 .test {
     position: relative;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     background-image: url(space.png);
-    animation: panning 45s infinite linear;
+    animation: panning 55s infinite linear;
 }
 
 @keyframes panning {
@@ -26,21 +26,27 @@ body {
 
 .text {
     position: absolute;
-    top: 110px;
-    left: auto;
-    right: 0;
-    z-index: 20;
+    display: flex;
+    justify-content: space-between;
+    top: 140px;
+    width: 1600px;
     height: auto;
-    width: auto;
-    margin: auto;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 150px;
-    font-weight: 700;
-    letter-spacing: 250px;
-    color: white;
-    text-align: center;
+    right: 160px;
+    z-index: 20;
     background: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 120px;
+    font-weight: 700;
+    color: rgb(37, 6, 109);
+    text-align: center;
+    transition: ease-in;
+    transition: ease-out;
+    transition-duration: 0.5s;
   }
+
+.letter {
+    opacity: 0;
+}
 
 .credits {
     position: absolute;
@@ -52,16 +58,26 @@ body {
     width: auto;
     margin: auto;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 50px;
+    font-size: 70px;
     font-weight: 500;
     color: white;
     text-align: center;
     background: none;
     opacity: 0;
+    transition: ease-in;
+    transition: ease-out;
+    transition-duration: 0.7s;
 }
 
 .visible {
     opacity: 1;
+    transition-duration: 0.7s;
+}
+
+.visible2 {
+    opacity: 1;
+    transition-duration: 5s;
+    color: white;
 }
 
 .menu {
